--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
-                        <h2 class="block-title color-white text-center"> Món ăn đặc biệt hôm này</h2>
+                        <h2 class="block-title color-white text-center"> Món ăn đặc biệt hôm nay</h2>
                         <h3 class="title-caption text-center"> Với các món ăn đặc biệt được thay đổi hằng ngày này quý khách sẽ không bị nhàm chán hay lo sợ vì các món ăn không có gì thay đổi. </h5>
                     </div>
                     <div class="special-box">
@@ -106,9 +106,9 @@
                                 <a href="#" class="item-hover">
                                     <div class="item-info">
                                         <div class="headline">
-                                            SALMON STEAK
+                                            Bít tết cá hồi
                                             <div class="line"></div>
-                                            <div class="dit-line">Lorem ipsum dolor sit amet, consectetur adip aliqua. Ut enim ad minim venia.</div>
+                                            <div class="dit-line">Món ăn được làm từ đầu bếp John Doggett với cá hồi tươi ngon vừa nhập từ biển sáng nay.</div>
                                         </div>
                                     </div>
                                 </a>
@@ -120,9 +120,9 @@
                                 <a href="#" class="item-hover">
                                     <div class="item-info">
                                         <div class="headline">
-                                            ITALIAN PIZZA
+                                            PIZZA Ý
                                             <div class="line"></div>
-                                            <div class="dit-line">Lorem ipsum dolor sit amet, consectetur adip aliqua. Ut enim ad minim venia.</div>
+                                            <div class="dit-line">Món ăn cổ điển của người nước ý được đầu bếp John Doggett làm trong cuộc thi Masterchef.</div>
                                         </div>
                                     </div>
                                 </a>
@@ -134,9 +134,9 @@
                                 <a href="#" class="item-hover">
                                     <div class="item-info">
                                         <div class="headline">
-                                            VEG. ROLL
+                                            Tôm trộn cuộn
                                             <div class="line"></div>
-                                            <div class="dit-line">Lorem ipsum dolor sit amet, consectetur adip aliqua. Ut enim ad minim venia.</div>
+                                            <div class="dit-line">Món ăn đầy hấp dẫn từ tôm biển tươi nguyên chất được chế biến từ đầu bếp Jeffrey Spender.</div>
                                         </div>
                                     </div>
                                 </a>
@@ -148,9 +148,9 @@
                                 <a href="#" class="item-hover">
                                     <div class="item-info">
                                         <div class="headline">
-                                            SALMON STEAK
+                                            Gà đi trên đất
                                             <div class="line"></div>
-                                            <div class="dit-line">Lorem ipsum dolor sit amet, consectetur adip aliqua. Ut enim ad minim venia.</div>
+                                            <div class="dit-line">Món ăn được đầu bếp Jack Lee tạo ra để thi cuộc thi chiếc thì vàng.</div>
                                         </div>
                                     </div>
                                 </a>
@@ -162,9 +162,9 @@
                                 <a href="#" class="item-hover">
                                     <div class="item-info">
                                         <div class="headline">
-                                            VEG. ROLL
+                                            Phượng hoàng hồi sinh
                                             <div class="line"></div>
-                                            <div class="dit-line">Lorem ipsum dolor sit amet, consectetur adip aliqua. Ut enim ad minim venia.</div>
+                                            <div class="dit-line">Được làm từ sườn gà phối hợp với sốt gia vị vừa đủ.</div>
                                         </div>
                                     </div>
                                 </a>
